Fixed gun clipping

--- a/public/stylesheets/battlefield.css
+++ b/public/stylesheets/battlefield.css
@@ -6,10 +6,10 @@
 
 .tank {
   position: absolute;
-  width: 40px;
-  height: 40px;
-  margin: -20px 0 0 -20px;
-  background: url(/images/body.png) 0 0 no-repeat;
+  width: 60px;
+  height: 60px;
+  margin: -30px 0 0 -30px;
+  background: url(/images/body.png) 10px 10px no-repeat;
   overflow: hidden;
 }
 
@@ -17,8 +17,8 @@
   position: relative;
   width: 25px;
   height: 50px;
-  left: 10px;
-  top: -10px;
+  left: 20px;
+  top: 0px;
   background: url(/images/head.png) transparent 0 0 no-repeat;
   
   transform-origin: 10px 27px;
